fix: remove jumps when displaying errors

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 form {
   display: flex;
   flex-direction: column;
-  max-width: 500px;
+  max-width: 570px;
   margin: 0 auto;
   padding: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -15,7 +15,7 @@ form {
 label {
   font-size: 16px;
   color: #333;
-  margin-top: 15px;
+  margin-top: 5px;
   margin-bottom: 5px;
 }
 
@@ -101,3 +101,14 @@ a {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   font-size: 26px;
 }
+
+.hidden {
+  visibility: hidden;
+  
+}
+
+.height {
+  height: 38.18px;
+}
+
+
